# languages-benchmark

./: .gitignore  LICENSE  README.md  bench  benchmark.yaml  community.yaml  pyproject.toml  rubrics.yaml  runtime_rubrics.yaml  weights.default.yaml
docs/: expected-outputs.json  publish-manifest.json
docs/plans/: 2026-04-22-next-quality-improvements-plan.md  2026-04-22-reporting-improvements-plan.md  2026-04-22-second-quality-improvements-plan.md  2026-04-22-third-quality-improvements-plan.md
fixtures/mock_site/: about.html  index.html
fixtures/mock_site/l/: index.html  page_0.html  page_1.html  page_10.html  page_11.html  page_12.html  page_13.html  page_14.html  page_15.html  page_16.html  page_17.html  page_18.html  page_19.html  page_2.html  page_20.html  page_21.html  page_22.html  page_23.html  page_24.html  page_25.html  page_26.html  (+40 more)
fixtures/mocks/: ai_service.json  ai_service_l.json  ai_service_m.json  ai_service_s.json  public_api.json  public_api_l.json  public_api_m.json  public_api_s.json  twitter_like.json  twitter_like_l.json  twitter_like_m.json  twitter_like_s.json
fixtures/ui/: basic_web_application.html  data_visualization.html  gui_calculator.html
languages_benchmark.egg-info/: PKG-INFO  SOURCES.txt
runner/: cli.py  config.py  engine.py  fixtures.py  loc.py  models.py  readme_sync.py  reporting.py  scoring.py  service_workloads.py  ui-driver.Dockerfile  ui_driver.py  ui_workloads.py  utils.py
tasks/: catalog.yaml
tests/: test_cli_dry_run.py  test_config.py  test_contracts.py  test_readme_sync.py  test_reporting.py  test_scoring.py
(+346 files in other folders)
